<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/tbl"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >
        <com.google.ads.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            ads:adSize="BANNER"
            ads:adUnitId=""
            ads:backgroundColor="#000000"
            ads:primaryTextColor="#FFFFFF"
            ads:secondaryTextColor="#CCCCCC" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" 
        android:layout_weight="1" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
            
            android:paddingLeft="40dip"
            android:paddingRight="40dip"
            android:stretchColumns="*" >

            <TextView
                android:id="@+id/negeri"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="20dip"
                android:paddingTop="12dip"
                android:text="@string/select_negeri_default"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/kawasan"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="20dip"
                android:text="@string/select_kawasan_default"
                android:textColor="@color/black" />

            <TableRow>
                <TextView
                    android:id="@+id/kemaskini"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:text="@string/default_kemaskini"
                    android:textSize="20dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/kemaskini_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:text="@string/kemaskini_title"
                    android:textSize="22dp"
                    android:textColor="@color/black" />


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/calc_method"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/calc_method_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:paddingRight="20dip"
                    android:text="@string/calc_method_title"
                    android:textColor="@color/black" />


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/subuh_time"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/subuh_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:textSize="22dp"
                    android:text="@string/subuh_title"
                    android:textColor="@color/black" />


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/syuruk_time"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/syuruk_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:textSize="22dp"
                    android:text="@string/syuruk_title"
                    android:textColor="@color/black" />


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/zohor_time"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/zohor_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:textSize="22dp"
                    android:text="@string/zohor_title"
                    android:textColor="@color/black" />


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/asar_time"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/asar_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:textSize="22dp"
                    android:text="@string/asar_title"
                    android:textColor="@color/black" />


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/maghrib_time"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/maghrib_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:textSize="22dp"
                    android:text="@string/maghrib_title"
                    android:textColor="@color/black" />


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/isya_time"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="22dp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/isya_title"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dip"
                    android:textSize="22dp"
                    android:text="@string/isya_title"
                    android:textColor="@color/black" />


            </TableRow>

            <TextView
                android:layout_margin="2dp"
                android:gravity="center"
                android:paddingBottom="12dip"
                android:text="@string/based_on"
                android:textColor="@color/black" />
        </TableLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
    </ProgressBar>
    <ImageButton
        android:id="@+id/select_method"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:paddingBottom="12dip"
        android:paddingTop="12dip"
        android:text="@string/select_zone_title" />



</LinearLayout>